--- a/app.json
+++ b/app.json
@@ -30,7 +30,8 @@
           "backgroundColor": "#ffffff"
         }
       ],
-      "expo-asset"
+      "expo-asset",
+      "expo-localization"
     ]
   }
 }
