--- a/app.json
+++ b/app.json
@@ -31,7 +31,8 @@
         }
       ],
       "expo-asset",
-      "expo-localization"
+      "expo-localization",
+      "expo-secure-store"
     ]
   }
 }
