--- a/package.json
+++ b/package.json
@@ -16,51 +16,51 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
     "axios": "^1.8.4",
-    "expo": "~52.0.43",
-    "expo-asset": "~11.0.5",
-    "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.8",
-    "expo-font": "~13.0.4",
-    "expo-haptics": "~14.0.1",
-    "expo-image-picker": "~16.0.6",
-    "expo-linking": "~7.0.5",
-    "expo-localization": "~16.0.1",
-    "expo-location": "~18.0.10",
-    "expo-notifications": "~0.29.14",
-    "expo-splash-screen": "~0.29.22",
-    "expo-status-bar": "~2.0.1",
-    "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.9",
-    "expo-updates": "~0.27.4",
-    "expo-web-browser": "~14.0.2",
+    "expo": "~53.0.0",
+    "expo-asset": "~11.1.5",
+    "expo-av": "~15.1.5",
+    "expo-blur": "~14.1.5",
+    "expo-constants": "~17.1.6",
+    "expo-font": "~13.3.1",
+    "expo-haptics": "~14.1.4",
+    "expo-image-picker": "~16.1.4",
+    "expo-linking": "~7.1.5",
+    "expo-localization": "~16.1.5",
+    "expo-location": "~18.1.5",
+    "expo-notifications": "~0.31.3",
+    "expo-secure-store": "~14.2.3",
+    "expo-splash-screen": "~0.30.9",
+    "expo-status-bar": "~2.2.3",
+    "expo-symbols": "~0.4.5",
+    "expo-system-ui": "~5.0.8",
+    "expo-updates": "~0.28.14",
+    "expo-web-browser": "~14.1.6",
     "i18n-js": "^4.5.1",
     "i18next": "^25.0.0",
     "i18next-browser-languagedetector": "^8.0.5",
-    "lottie-react-native": "7.1.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "lottie-react-native": "7.2.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-i18next": "^15.4.1",
-    "react-native": "0.76.9",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native": "0.79.3",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "~1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-localize": "^3.4.1",
-    "react-native-maps": "1.18.0",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-maps": "1.20.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-secure-store": "~14.0.1",
-    "expo-av": "~15.0.2"
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -69,7 +69,7 @@
     "@types/react-test-renderer": "^18.3.0",
     "@types/stack-utils": "^2.0.3",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.6",
+    "jest-expo": "~53.0.0",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
