--- a/package.json
+++ b/package.json
@@ -54,10 +54,13 @@
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-localize": "^3.4.1",
     "react-native-maps": "1.20.1",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-star-rating-widget": "^1.9.2",
+    "react-native-svg": "^15.11.2",
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
