--- a/task-backend/.env
+++ b/task-backend/.env
@@ -1,2 +1,5 @@
 MONGO_URI=mongodb+srv://taskuser:taskpassword@task.kgni0ce.mongodb.net/task
 JWT_SECRET=superSecretKeyHere123
+CLOUDINARY_CLOUD_NAME=dfli5co1y
+CLOUDINARY_API_KEY=633694813154673
+CLOUDINARY_API_SECRET=s_Hx8hR0c-9zWrxKhilDBA2At4c
