--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "expo-av": "~15.1.5",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
+    "expo-document-picker": "~13.1.6",
+    "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image-picker": "~16.1.4",
@@ -64,9 +66,7 @@
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5",
-    "expo-document-picker": "~13.1.6",
-    "expo-file-system": "~18.1.11"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
