--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
     "axios": "^1.8.4",
-    "expo": "~53.0.0",
+    "expo": "53.0.17",
     "expo-asset": "~11.1.5",
     "expo-av": "~15.1.5",
     "expo-blur": "~14.1.5",
