--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "19.0.0",
     "react-i18next": "^15.4.1",
     "react-native": "0.79.3",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "~1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
