--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -35,7 +35,7 @@
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.5",
     "expo-localization": "~16.1.5",
-    "expo-location": "~18.1.5",
+    "expo-location": "~18.1.6",
     "expo-notifications": "~0.31.3",
     "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.9",
