--- a/task-backend/.env
+++ b/task-backend/.env
@@ -3,3 +3,5 @@ JWT_SECRET=superSecretKeyHere123
 CLOUDINARY_CLOUD_NAME=dvxz4nfnx
 CLOUDINARY_API_KEY=176487835777454
 CLOUDINARY_API_SECRET=tHPj_n_gEPHUnhfMot9H0TO3LvU
+RESEND_API_KEY=re_XVBeV4pL_ErdG2e5LNS97VpxUwDqnXRHW
+EMAIL_FROM="TaskBH <noreply@taskbh.com>"
