--- a/app.json
+++ b/app.json
@@ -11,9 +11,13 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.task.app",
+      "buildNumber": "1",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false,
         "NSLocationWhenInUseUsageDescription": "We use your location to show where the task is.",
+        "NSCameraUsageDescription": "We use the camera so you can take photos for tasks and your profile.",
+        "NSPhotoLibraryUsageDescription": "We need access to your photo library so you can upload images for tasks and your profile.",
+        "NSPhotoLibraryAddUsageDescription": "We save images to your library when you choose to download or export them.",
         "LSApplicationQueriesSchemes": ["comgooglemaps"]
       }
     },
