--- a/eas.json
+++ b/eas.json
@@ -15,16 +15,10 @@
     },
     "production": {
       "autoIncrement": true,
-      "ios": {
-        "simulator": false
-      }
+      "ios": { "simulator": false }
     }
   },
   "submit": {
-    "production": {
-      "ios": {
-        "projectId": "02016b9f-21ea-402a-987c-c3691146d194"
-      }
-    }
+    "production": {}
   }
 }
