--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
     "axios": "^1.8.4",
-    "expo": "53.0.20",
+    "expo": "^53.0.20",
     "expo-asset": "~11.1.5",
-    "expo-av": "~15.1.5",
+    "expo-av": "~15.1.7",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-document-picker": "~13.1.6",
@@ -33,17 +33,17 @@
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image-picker": "~16.1.4",
-    "expo-linking": "~7.1.5",
-    "expo-localization": "~16.1.5",
+    "expo-linking": "~7.1.7",
+    "expo-localization": "~16.1.6",
     "expo-location": "~18.1.6",
-    "expo-notifications": "~0.31.3",
+    "expo-notifications": "~0.31.4",
     "expo-secure-store": "~14.2.3",
-    "expo-splash-screen": "~0.30.9",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.8",
-    "expo-updates": "~0.28.14",
-    "expo-web-browser": "~14.1.6",
+    "expo-system-ui": "~5.0.10",
+    "expo-updates": "~0.28.17",
+    "expo-web-browser": "~14.2.0",
     "i18n-js": "^4.5.1",
     "i18next": "^25.0.0",
     "i18next-browser-languagedetector": "^8.0.5",
@@ -51,7 +51,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-i18next": "^15.4.1",
-    "react-native": "0.79.3",
+    "react-native": "^0.81.0",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "~1.11.0",
@@ -73,8 +73,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@expo/config-plugins": "~10.1.1",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.3.0",
     "@types/stack-utils": "^2.0.3",
     "jest": "^29.2.1",
