chore: rely on autoIncrement for iOS buildNumber

--- a/app.json
+++ b/app.json
@@ -11,14 +11,15 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.taskbh.taskapp",
-      "buildNumber": "1",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false,
         "NSLocationWhenInUseUsageDescription": "We use your location to show where the task is.",
         "NSCameraUsageDescription": "We use the camera so you can take photos for tasks and your profile.",
         "NSPhotoLibraryUsageDescription": "We need access to your photo library so you can upload images for tasks and your profile.",
         "NSPhotoLibraryAddUsageDescription": "We save images to your library when you choose to download or export them.",
-        "LSApplicationQueriesSchemes": ["comgooglemaps"]
+        "LSApplicationQueriesSchemes": [
+          "comgooglemaps"
+        ]
       }
     },
     "android": {
@@ -26,21 +27,38 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "permissions": ["ACCESS_COARSE_LOCATION", "ACCESS_FINE_LOCATION"],
+      "permissions": [
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_FINE_LOCATION"
+      ],
       "package": "com.task.app"
     },
-    "web": { "favicon": "./assets/images/favicon.png" },
+    "web": {
+      "favicon": "./assets/images/favicon.png"
+    },
     "plugins": [
       [
         "expo-splash-screen",
-        { "image": "./assets/images/splash-icon.png", "imageWidth": 200, "resizeMode": "contain", "backgroundColor": "#ffffff" }
+        {
+          "image": "./assets/images/splash-icon.png",
+          "imageWidth": 200,
+          "resizeMode": "contain",
+          "backgroundColor": "#ffffff"
+        }
       ],
       "expo-asset",
       "expo-localization",
-      "expo-secure-store"
+      "expo-secure-store",
+      "expo-web-browser"
     ],
-    "extra": { "eas": { "projectId": "02016b9f-21ea-402a-987c-c3691146d194" } },
+    "extra": {
+      "eas": {
+        "projectId": "02016b9f-21ea-402a-987c-c3691146d194"
+      }
+    },
     "runtimeVersion": "1.0.0",
-    "updates": { "url": "https://u.expo.dev/02016b9f-21ea-402a-987c-c3691146d194" }
+    "updates": {
+      "url": "https://u.expo.dev/02016b9f-21ea-402a-987c-c3691146d194"
+    }
   }
 }
