--- a/eas.json
+++ b/eas.json
@@ -18,7 +18,15 @@
       "ios": { "simulator": false }
     }
   },
-  "submit": {
-    "production": {}
+"submit": {
+  "production": {
+    "ios": {
+      "ascApiKeyPath": "./AuthKey_TZ7Z29AMA2.p8",
+      "ascApiKeyId": "TZ7Z29AMA2",
+      "ascApiKeyIssuerId": "Ffcu-osuo-bzby-atch",
+      "ascAppId": "6751346603"
+    }
   }
+}
+
 }
