--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
     "axios": "^1.8.4",
-    "expo": "^53.0.20",
+    "expo": "53.0.22",
     "expo-asset": "~11.1.5",
     "expo-av": "~15.1.7",
     "expo-blur": "~14.1.5",
@@ -37,21 +37,25 @@
     "expo-localization": "~16.1.6",
     "expo-location": "~18.1.6",
     "expo-notifications": "~0.31.4",
-    "expo-secure-store": "~14.2.3",
+    "expo-secure-store": "~14.2.4",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.10",
+    "expo-system-ui": "~5.0.11",
     "expo-updates": "~0.28.17",
     "expo-web-browser": "~14.2.0",
+    "express-rate-limit": "^8.0.1",
+    "helmet": "^8.1.0",
     "i18n-js": "^4.5.1",
     "i18next": "^25.0.0",
     "i18next-browser-languagedetector": "^8.0.5",
+    "jest-expo": "~53.0.10",
     "lottie-react-native": "7.2.2",
+    "morgan": "^1.10.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-i18next": "^15.4.1",
-    "react-native": "^0.81.0",
+    "react-native": "0.79.5",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "~1.11.0",
@@ -65,7 +69,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-star-rating-widget": "^1.9.2",
-    "react-native-svg": "^15.11.2",
+    "react-native-svg": "15.11.2",
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
@@ -73,15 +77,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@expo/config-plugins": "~10.1.1",
     "@types/jest": "^29.5.12",
     "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.3.0",
     "@types/stack-utils": "^2.0.3",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.0",
+    "jest-expo": "~53.0.10",
+    "nodemon": "^3.1.10",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "~5.8.3"
   },
   "private": true,
   "packageManager": "npm@10.8.1",
