--- a/task-backend/package.json
+++ b/task-backend/package.json
@@ -2,12 +2,8 @@
   "name": "task-backend",
   "version": "1.0.0",
   "main": "server.js",
-  "type": "module",
-  "engines": { "node": ">=18" },
   "scripts": {
-    "start": "NODE_ENV=production node server.js",
-    "dev": "nodemon server.js",
-    "lint": "echo \"(add eslint later)\""
+    "start": "node server.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
@@ -15,16 +11,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
-    "morgan": "^1.10.0",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "resend": "^5.0.0",
-    "express-rate-limit": "^7.4.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.0"
+    "resend": "^5.0.0"
   }
 }
