hopefulyl last one

--- a/eas.json
+++ b/eas.json
@@ -23,10 +23,11 @@
     "ios": {
       "ascApiKeyPath": "./AuthKey_TZ7Z29AMA2.p8",
       "ascApiKeyId": "TZ7Z29AMA2",
-      "ascApiKeyIssuerId": "Ffcu-osuo-bzby-atch",
+      "ascApiKeyIssuerId": "28edad92-8cb5-41aa-9afd-2c455e8937af",
       "ascAppId": "6751346603"
     }
   }
 }
+
 
 }
