--- a/app.json
+++ b/app.json
@@ -22,16 +22,18 @@
         ]
       }
     },
-"android": {
-  "adaptiveIcon": {
-    "foregroundImage": "./assets/images/adaptive-icon.png",
-    "backgroundColor": "#ffffff"
-  },
-  "permissions": ["ACCESS_COARSE_LOCATION", "ACCESS_FINE_LOCATION"],
-  "package": "com.taskbh.taskapp",
-  "versionCode": 1
-}
-,
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "backgroundColor": "#ffffff"
+      },
+      "permissions": [
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_FINE_LOCATION"
+      ],
+      "package": "com.taskbh.taskapp",
+      "versionCode": 1
+    },
     "web": {
       "favicon": "./assets/images/favicon.png"
     },
@@ -48,6 +50,7 @@
       "expo-asset",
       "expo-localization",
       "expo-secure-store",
+      "expo-font",
       "expo-web-browser"
     ],
     "extra": {
@@ -58,6 +61,7 @@
     "runtimeVersion": "1.0.0",
     "updates": {
       "url": "https://u.expo.dev/02016b9f-21ea-402a-987c-c3691146d194"
-    }
+    },
+    "sdkVersion": "54.0.0"
   }
 }
