--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "task-app",
-  "main": "node_modules/expo/AppEntry.js",
   "version": "1.0.0",
+  "private": true,
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -15,49 +16,49 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-picker/picker": "^2.11.1",
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
     "axios": "^1.8.4",
-    "expo": "53.0.22",
-    "expo-asset": "~11.1.5",
-    "expo-av": "~15.1.7",
-    "expo-blur": "~14.1.5",
-    "expo-constants": "~17.1.6",
-    "expo-document-picker": "~13.1.6",
-    "expo-file-system": "~18.1.11",
-    "expo-font": "~13.3.1",
-    "expo-haptics": "~14.1.4",
-    "expo-image-picker": "~16.1.4",
-    "expo-linking": "~7.1.7",
-    "expo-localization": "~16.1.6",
-    "expo-location": "~18.1.6",
-    "expo-notifications": "~0.31.4",
-    "expo-secure-store": "~14.2.4",
-    "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.11",
-    "expo-updates": "~0.28.17",
-    "expo-web-browser": "~14.2.0",
+    "expo": "~54.0.0",
+    "expo-asset": "~12.0.9",
+    "expo-av": "~16.0.7",
+    "expo-blur": "~15.0.7",
+    "expo-constants": "~18.0.9",
+    "expo-document-picker": "~14.0.7",
+    "expo-file-system": "~19.0.0",
+    "expo-font": "~14.0.8",
+    "expo-haptics": "~15.0.7",
+    "expo-image-picker": "~17.0.0",
+    "expo-linking": "~8.0.8",
+    "expo-localization": "~17.0.7",
+    "expo-location": "~19.0.0",
+    "expo-notifications": "~0.32.0",
+    "expo-secure-store": "~15.0.0",
+    "expo-splash-screen": "~31.0.10",
+    "expo-status-bar": "~3.0.8",
+    "expo-symbols": "~1.0.7",
+    "expo-system-ui": "~6.0.7",
+    "expo-updates": "~29.0.11",
+    "expo-web-browser": "~15.0.7",
     "express-rate-limit": "^8.0.1",
     "helmet": "^8.1.0",
     "i18n-js": "^4.5.1",
     "i18next": "^25.0.0",
     "i18next-browser-languagedetector": "^8.0.5",
-    "jest-expo": "~53.0.10",
-    "lottie-react-native": "7.2.2",
+    "jest-expo": "~54.0.0",
+    "lottie-react-native": "~7.3.1",
     "morgan": "^1.10.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-i18next": "^15.4.1",
-    "react-native": "0.79.5",
+    "react-native": "0.81.4",
     "react-native-country-picker-modal": "^2.0.0",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "~1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-localize": "^3.4.1",
@@ -65,29 +66,28 @@
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-paper": "^5.14.5",
     "react-native-picker-select": "^9.3.1",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-star-rating-widget": "^1.9.2",
-    "react-native-svg": "15.11.2",
+    "react-native-svg": "15.12.1",
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0",
+    "react-native-worklets": "^0.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
-    "@types/react": "~19.0.10",
+    "@types/react": "~19.1.10",
     "@types/react-test-renderer": "^18.3.0",
-    "@types/stack-utils": "^2.0.3",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.10",
+    "jest-expo": "~54.0.0",
     "nodemon": "^3.1.10",
     "react-test-renderer": "18.3.1",
-    "typescript": "~5.8.3"
+    "typescript": "~5.9.2"
   },
-  "private": true,
   "packageManager": "npm@10.8.1",
   "engines": {
     "node": ">=18 <21"
