--- a/task-backend/.env
+++ b/task-backend/.env
@@ -5,3 +5,5 @@ CLOUDINARY_API_KEY=176487835777454
 CLOUDINARY_API_SECRET=tHPj_n_gEPHUnhfMot9H0TO3LvU
 RESEND_API_KEY=re_XVBeV4pL_ErdG2e5LNS97VpxUwDqnXRHW
 EMAIL_FROM="TaskBH <noreply@taskbh.com>"
+NODE_ENV=production
+CORS_ORIGINS=
