--- a/task-backend/package.json
+++ b/task-backend/package.json
@@ -1,20 +1,19 @@
 {
   "expo": {
-  "doctor": {
-    "reactNativeDirectoryCheck": {
-      "exclude": [
-        "react-native-star-rating-widget",
-        "i18next-browser-languagedetector",
-        "react-native-vector-icons",
-        "express-rate-limit",
-        "helmet",
-        "morgan"
-      ],
-      "listUnknownPackages": false
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "react-native-star-rating-widget",
+          "i18next-browser-languagedetector",
+          "react-native-vector-icons",
+          "express-rate-limit",
+          "helmet",
+          "morgan"
+        ],
+        "listUnknownPackages": false
+      }
     }
-  }
-}
-,
+  },
   "name": "task-backend",
   "version": "1.0.0",
   "main": "server.js",
@@ -27,6 +26,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "multer": "^2.0.1",
