--- a/task-backend/package.json
+++ b/task-backend/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "zod": "^3.23.8",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
