Add secuirty headers and pii redacation

--- a/task-backend/.env
+++ b/task-backend/.env
@@ -1,5 +1,5 @@
 MONGO_URI=mongodb+srv://taskuser:taskpassword@task.kgni0ce.mongodb.net/task
-JWT_SECRET=superSecretKeyHere123
+JWT_SECRET=ZkQx9wEwq3tXK6!rM2^u7Fj@Pp8vHsD4yLb%NcR1Vz+Qa0Wg$Te&Yi(Uo)Jk
 CLOUDINARY_CLOUD_NAME=dvxz4nfnx
 CLOUDINARY_API_KEY=176487835777454
 CLOUDINARY_API_SECRET=tHPj_n_gEPHUnhfMot9H0TO3LvU
