Fix location issues on Samsung/Android, improve error messages, and add expo-location plugin
- Added timeout and better location handling for Samsung devices
- Improved error messages with validation details for registration
- Added expo-location plugin configuration
- Enhanced location permission checks and error handling
- Fixed Android-specific location accuracy settings

--- a/app.json
+++ b/app.json
@@ -47,6 +47,14 @@
           "backgroundColor": "#ffffff"
         }
       ],
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "We use your location to show where the task is.",
+          "locationAlwaysPermission": "We use your location to show where the task is.",
+          "locationWhenInUsePermission": "We use your location to show where the task is."
+        }
+      ],
       "expo-asset",
       "expo-localization",
       "expo-secure-store",
