--- a/package.json
+++ b/package.json
@@ -24,27 +24,27 @@
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
     "axios": "^1.8.4",
-    "expo": "~54.0.0",
+    "expo": "~54.0.28",
     "expo-asset": "~12.0.9",
-    "expo-av": "~16.0.7",
-    "expo-blur": "~15.0.7",
+    "expo-av": "~16.0.8",
+    "expo-blur": "~15.0.8",
     "expo-constants": "~18.0.9",
-    "expo-document-picker": "~14.0.7",
+    "expo-document-picker": "~14.0.8",
     "expo-file-system": "~19.0.0",
     "expo-font": "~14.0.8",
-    "expo-haptics": "~15.0.7",
-    "expo-image-picker": "~17.0.0",
-    "expo-linking": "~8.0.8",
-    "expo-localization": "~17.0.7",
-    "expo-location": "~19.0.0",
-    "expo-notifications": "~0.32.0",
-    "expo-secure-store": "~15.0.0",
-    "expo-splash-screen": "~31.0.10",
-    "expo-status-bar": "~3.0.8",
-    "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
-    "expo-updates": "~29.0.11",
-    "expo-web-browser": "~15.0.7",
+    "expo-haptics": "~15.0.8",
+    "expo-image-picker": "~17.0.10",
+    "expo-linking": "~8.0.10",
+    "expo-localization": "~17.0.8",
+    "expo-location": "~19.0.8",
+    "expo-notifications": "~0.32.14",
+    "expo-secure-store": "~15.0.8",
+    "expo-splash-screen": "~31.0.12",
+    "expo-status-bar": "~3.0.9",
+    "expo-symbols": "~1.0.8",
+    "expo-system-ui": "~6.0.9",
+    "expo-updates": "~29.0.15",
+    "expo-web-browser": "~15.0.10",
     "express-rate-limit": "^8.0.1",
     "helmet": "^8.1.0",
     "i18n-js": "^4.5.1",
@@ -56,7 +56,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-i18next": "^15.4.1",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "~1.11.0",
@@ -81,9 +81,10 @@
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~19.1.10",
+    "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~54.0.0",
+    "jest-expo": "~54.0.15",
     "nodemon": "^3.1.10",
     "react-test-renderer": "18.3.1",
     "typescript": "~5.9.2"
