--- a/package.json
+++ b/package.json
@@ -79,12 +79,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@expo/metro-config": "^54.0.12",
     "@types/jest": "^29.5.12",
     "@types/react": "~19.1.10",
     "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~54.0.15",
+    "metro": "^0.83.3",
+    "metro-config": "^0.83.3",
     "nodemon": "^3.1.10",
     "react-test-renderer": "18.3.1",
     "typescript": "~5.9.2"
